--- a/mrtg_speedtest.cfg
+++ b/mrtg_speedtest.cfg
@@ -5,7 +5,7 @@
 ### Global Config Options
 
 #  for UNIX
-WorkDir: /srv/www/htdocs/speed
+WorkDir: /var/www/html/speed
 
 #  or for NT
 # WorkDir: c:\mrtgdata
@@ -25,7 +25,8 @@ EnableIPv6: no
 ######################################################################
 
 Target[localhost_rtt]: `perl GetPing.pl`
-MaxBytes[localhost_rtt]: 30
+MaxBytes[localhost_rtt]: 50
+MaxBytes2[localhost_rtt]: 100
 Unscaled[localhost_rtt]: dwmy
 Timezone[localhost_rtt]: GMT
 Title[localhost_rtt]: RTT Statistics for Internet Access
@@ -39,7 +40,8 @@ Legend2[localhost_rtt]: RTT in ms
 PageTop[localhost_rtt]: <H1>RTT</H1>
 
 Target[localhost_dl]: `perl GetSpeedDLMbits.pl`
-MaxBytes[localhost_dl]: 300
+MaxBytes[localhost_dl]: 150
+MaxBytes2[localhost_dl]: 300
 Unscaled[localhost_dl]: dwmy
 Timezone[localhost_dl]: GMT
 Title[localhost_dl]: Download Speed Statistics for Internet Access
@@ -53,7 +55,8 @@ Legend2[localhost_dl]: Download speed in Mbit/s
 PageTop[localhost_dl]: <H1>Download Speed</H1>
 
 Target[localhost_ul]: `perl GetSpeedULMbits.pl`
-MaxBytes[localhost_ul]: 300
+MaxBytes[localhost_ul]: 150
+MaxBytes2[localhost_ul]: 300
 Unscaled[localhost_ul]: dwmy
 Timezone[localhost_ul]: GMT
 Title[localhost_ul]: Upload Speed Statistics for Internet Access
