Added web server access statistics with curl

--- a/mrtg_speedtest.cfg
+++ b/mrtg_speedtest.cfg
@@ -69,3 +69,78 @@ Legend1[localhost_ul]: n/a
 Legend2[localhost_ul]: Upload speed in Mbit/s
 PageTop[localhost_ul]: <H1>Upload Speed</H1>
 
+Target[localhost_dns]: `perl GetDNS.pl`
+MaxBytes[localhost_dns]: 100
+MaxBytes2[localhost_dns]: 200
+Unscaled[localhost_dns]: dwmy
+Timezone[localhost_dns]: GMT
+Title[localhost_dns]: DNS Name Lookup Statistics for linux.com
+Options[localhost_dns]: integer, gauge, nopercent, growright
+YLegend[localhost_dns]: ms
+ShortLegend[localhost_dns]: ms
+LegendI[localhost_dns]:
+LegendO[localhost_dns]: Name lookup time:&nbsp;
+Legend1[localhost_dns]: n/a
+Legend2[localhost_dns]: Name lookup time in ms
+PageTop[localhost_dns]: <H1>Name Lookup Time to <a href="http://linux.com">linux.com</a></H1>
+
+Target[localhost_conn]: `perl GetConnect.pl`
+MaxBytes[localhost_conn]: 100
+MaxBytes2[localhost_conn]: 200
+Unscaled[localhost_conn]: dwmy
+Timezone[localhost_conn]: GMT
+Title[localhost_conn]: Connect Time Statistics for www.google.com
+Options[localhost_conn]: integer, gauge, nopercent, growright
+YLegend[localhost_conn]: ms
+ShortLegend[localhost_conn]: ms
+LegendI[localhost_conn]:
+LegendO[localhost_conn]: Connect time:&nbsp;
+Legend1[localhost_conn]: n/a
+Legend2[localhost_conn]: Connect time in ms
+PageTop[localhost_conn]: <H1>Connect Time to <a href="http://www.google.com">Google</a></H1>
+
+Target[localhost_prexfer]: `perl GetPreXfer.pl`
+MaxBytes[localhost_prexfer]: 1000
+MaxBytes2[localhost_prexfer]: 2000
+Unscaled[localhost_prexfer]: dwmy
+Timezone[localhost_prexfer]: GMT
+Title[localhost_prexfer]: Time Statistics for pretransfer of file from fsf.org
+Options[localhost_prexfer]: integer, gauge, nopercent, growright
+YLegend[localhost_prexfer]: ms
+ShortLegend[localhost_prexfer]: ms
+LegendI[localhost_prexfer]:
+LegendO[localhost_prexfer]: Pretransfer Time:&nbsp;
+Legend1[localhost_prexfer]: n/a
+Legend2[localhost_prexfer]: Pretransfer time in ms
+PageTop[localhost_prexfer]: <H1>Pretransfer time for <a href="http://fsf.org">FSF</a></H1>
+
+Target[localhost_startxfer]: `perl GetStartXfer.pl`
+MaxBytes[localhost_startxfer]: 1000
+MaxBytes2[localhost_startxfer]: 2000
+Unscaled[localhost_startxfer]: dwmy
+Timezone[localhost_startxfer]: GMT
+Title[localhost_startxfer]: Time Statistics for start transfer of file from eff.org
+Options[localhost_startxfer]: integer, gauge, nopercent, growright
+YLegend[localhost_startxfer]: ms
+ShortLegend[localhost_startxfer]: ms
+LegendI[localhost_startxfer]:
+LegendO[localhost_startxfer]: Start Transfer Time:&nbsp;
+Legend1[localhost_startxfer]: n/a
+Legend2[localhost_startxfer]: Start transfer time in ms
+PageTop[localhost_startxfer]: <H1>Start transfer time for <a href="http://eff.org">EFF</a></H1>
+
+Target[localhost_total]: `perl GetTotal.pl`
+MaxBytes[localhost_total]: 1000
+MaxBytes2[localhost_total]: 2000
+Unscaled[localhost_total]: dwmy
+Timezone[localhost_total]: GMT
+Title[localhost_total]: Time Statistics for total time to get fsfe.org home
+Options[localhost_total]: integer, gauge, nopercent, growright
+YLegend[localhost_total]: ms
+ShortLegend[localhost_total]: ms
+LegendI[localhost_total]:
+LegendO[localhost_total]: Total Time:&nbsp;
+Legend1[localhost_total]: n/a
+Legend2[localhost_total]: Total time in ms
+PageTop[localhost_total]: <H1>Total time to get <a href="http://fsfe.org">FSFE</a></H1>
+
